#
# Copyright (C) 2006  Seznam.cz, a.s.
#
# $Id$
#
# DESCRIPTION
# A makefile template for sphinxclient.
#
# AUTHORS
# Jan Kirschner <jan.kirschner@firma.seznam.cz>
#
# HISTORY
# 2006-12-14  (kirschner)
#             Created.
#


SUBDIRS = src include

# debian packaging scripts
EXTRA_DIST = debian/libsphinxclient.control debian/libsphinxclient.postinst \
             debian/libsphinxclient-dev.control \
             debian/make.sh
