#
# Copyright (C) 2006  Seznam.cz, a.s.
#
# $Id$
#
# DESCRIPTION
# A makefile template for SphinxClient.
#
# AUTHORS
# Jan Kirschner <jan.kirschner@firma.seznam.cz>
#
# HISTORY
# 2006-12-14  (kirschner)
#             Created.
#


includedir = @includedir@/sphinxclient

include_HEADERS = sphinxclient.h sphinxclientquery.h error.h

